# Syn-Text-Generator

./: README.md  main.py  pyproject.toml
src/syn_text/config/: fonts.yaml
src/syn_text/image_augmentations/: beta_affine.py  beta_morphology.py  beta_perspective.py  erode.py
src/syn_text/pipeline/: pipeline.py
src/syn_text/pipeline/data_handlers/: __init__.py  font_loader.py  image_generator.py  wiki_sentence_generator.py
